# Quantum-Spacetime-Bridge

./: .gitignore  CITATION.cff  LICENSE  README.md
numerics/debroglie-phase-bridge/: .gitignore  CITATION.cff  README.md  bootstrap_m33_v0.sh  create_results_tree.sh  k0_n0_reference_with_n1a_and_a1_v2.py  pyproject.toml  requirements.txt  run_n1a_miniscan.sh
numerics/debroglie-phase-bridge/_archive_masterchat_noncanonical/: MASTERCHAT_CANONICAL.md  MASTERCHAT_CURRENT_STATUS_2026-04-09.md  MASTERCHAT_CURRENT_STATUS_2026-04-09_v2.md  MASTERCHAT_CURRENT_STATUS_2026-04-10_v3.md  MASTERCHAT_EINFUEGESTUECK_BRUECKE_KONSOLIDIERT_v1.md  MASTERCHAT_Gravitation_und_RaumZeit_v1.md  MASTERCHAT_RELOCATION_CURRENT_2026-04-05.md  masterchat_current_status_2026_04_09_v_2.md
numerics/debroglie-phase-bridge/_quarantine/: bridge_carrier_block_d.py.bak  bridge_carrier_leave_one_out.py.bak  from __future__ import annotations.py  run:.yaml
numerics/debroglie-phase-bridge/configs/: config_m39a_family_full_audit.yaml  config_m39a_family_invariance_precheck.yaml  m39a_family_definitions.yaml  m39a_family_full_audit_runner.py  m39x_external_reference_families.yaml
numerics/debroglie-phase-bridge/m33_v0_scaffold/: README_M33_V0.md  dump_projektstruktur.sh
numerics/debroglie-phase-bridge/notes/: CONTINUUM_TO_PARTICULARITY_NOTE.md  M.ETH.1_projektethik_duerfen_wir_das.md  ONTOLOGICAL_SAFETY_NOTE.md
numerics/debroglie-phase-bridge/results/: README.md
numerics/debroglie-phase-bridge/scripts/: a1_kernel_probe.py  a1_sign_scan.py  a1_sign_scan_asym_p.py  analyze_n0_ensemble.py  (+17 more)
(+1589 files in other folders)
